crates/service/tests/references/snapshots/features__references__local__local_access_ident_idx.snap
---
source: crates/service/tests/references/local.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 36
      },
      "end": {
        "line": 2,
        "character": 42
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 19
      },
      "end": {
        "line": 3,
        "character": 20
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 33
      },
      "end": {
        "line": 3,
        "character": 39
      }
    }
  }
]
