crates/service/tests/references/snapshots/features__references__local__local_ref_int_idx.snap
---
source: crates/service/tests/references/local.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 29
      },
      "end": {
        "line": 2,
        "character": 32
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 19
      },
      "end": {
        "line": 3,
        "character": 20
      }
    }
  }
]
