crates/service/tests/references/snapshots/features__references__local__param_access_int_idx-2.snap
---
source: crates/service/tests/references/local.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 19
      },
      "end": {
        "line": 3,
        "character": 20
      }
    }
  }
]
