crates/service/tests/references/snapshots/features__references__local__param_access_via_ident_idx_type_def.snap
---
source: crates/service/tests/references/local.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 36
      },
      "end": {
        "line": 2,
        "character": 38
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 15
      },
      "end": {
        "line": 5,
        "character": 16
      }
    }
  }
]
