crates/service/tests/references/snapshots/features__references__local__param_access_via_int_idx_type_def-2.snap
---
source: crates/service/tests/references/local.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 15
      },
      "end": {
        "line": 5,
        "character": 16
      }
    }
  }
]
